(tests
 (names
  assertion_failed_test
  bool_test
  exceptions_test
  float_test
  int_test
  list_test
  option_eq_test
  option_test
  string_test
  tuple2_test
  tuple2_eq_test
  tuple3_test
  tuple3_eq_test)
 (libraries oUnit oAssert))

(env
 (dev
  (flags
   (:standard -warn-error -A -w +A-70))))
