(tests
 (names
  assertion_failed_test
  bool_test
  char_test
  exceptions_test
  float_test
  int_test
  list_eq_length_test
  list_eq_test
  list_length_test
  list_test
  option_eq_test
  option_test
  string_length_test
  string_test
  tuple2_test
  tuple2_eq_test
  tuple3_test
  tuple3_eq_test)
 (libraries oUnit oAssert))

(env
 (dev
  (flags
   (:standard -warn-error -A -w +A-70))))

(include_subdirs unqualified)
